# ImgSync

./: .gitignore  Cargo.toml  Makefile  README.md  tasks.toml
etc/: .gitignore  image_sync.service  img_sync.service  img_sync_example
src/: main.rs  storage.rs
src/storage/: slack.rs
