[package]
name = "img_sync"
version = "0.1.0"
authors = ["Isato Matsushita <22887835+bean1310@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.16"
daemonize-me = "0.3"
thiserror = "1.0.24"
ini = "1.3.0"
reqwest = { version = "0.11", features = ["blocking", "multipart", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.8.4"